hw02-kuber_intro/kuber/status_app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: status-service
spec:
  selector:
    app: status-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: ClusterIP
