hw02-kuber_intro/kuber/service_app_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.org/server-snippets: |
      location /admin {
      	deny all;
      	return 403 "Go away";
      }
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status-service
                port:
                  number: 8080
  ingressClassName: nginx
